k8s/apps/fast-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fast-api
  name: fast-api
  namespace: fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fast-api
    spec:
      containers:
      - image: 192.168.1.101:5000/fast-api:v1
        name: fast-api
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 8000
status: {}
