k8s/apps/fast-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fast-api
  name: fast-api-svc
  namespace: fast-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: fast-api
  type: ClusterIP
status:
  loadBalancer: {}
