k8s/apps/fast-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fast-api-route
  namespace: fast-api
spec:
  parentRefs:
  - name: fast-api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fast-api-svc
      port: 80
